--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+/* stylelint-disable property-no-unknown */
+/* stylelint-disable color-function-notation */
 /* Здесь вы напишете основную часть стилей страницы.
 
 Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
@@ -11,6 +13,287 @@
 */
 
 .page {
+  display: grid;
+  justify-content: center;
+  font-family: var(--font-primary, serif);
+  background-image: var(--bg-gradient);
+  background-size: cover;
+  background-attachment: fixed;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-variation-settings: 'wght' var(--font-primary-body);
+}
+
+.header {
+  display: grid;
+  justify-items: center;
+  gap: 20px;
+  margin-inline: clamp(0rem, -16.518rem + 44.048vw, 23.125rem);
+  margin-block: 100px;
+  margin-block-end: 98px;
+  padding-inline: clamp(1rem, -3.732rem + 12.619vw, 7.625rem);
+  padding-block: clamp(7.625rem, 7.268rem + 0.952vw, 8.125rem);
+  outline: 2px solid var(--outline-color);
+  font-family: var(--font-accent);
+  text-transform: uppercase;
+  background-color: var(--bg-color);
+  inline-size: clamp(23.438rem, 8.929rem + 38.69vw, 43.75rem);
+  block-size: clamp(20.438rem, 18.607rem + 4.881vw, 23rem);
+}
+
+.header__decorative {
+  font-size: clamp(3.063rem, 2.348rem + 1.905vw, 4.063rem);
+}
+
+.header__title {
+  font-size: clamp(0.875rem, 0.473rem + 1.071vw, 1.438rem);
+}
+
+.main {
+  display: grid;
+  justify-content: center;
+  gap: 50px;
+}
+
+.card {
+  border: 2px solid var(--outline-color);
+  background-color: var(--bg-color);
+  inline-size: clamp(23.438rem, 8.929rem + 38.69vw, 43.75rem);
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.card__header {
+  display: flex;
+  padding: 4px 10px;
+  font-variation-settings: 'wght' var(--font-primary-heading);
+  font-size: 18px;
+}
+
+.card__labeled-img {
+  position: relative;
+  display: block;
+  border-top: 2px solid var(--outline-color);
+  border-bottom: 2px solid var(--outline-color);
+}
+
+.card__label {
+  font-family: var(--font-accent);
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 14px;
+  font-weight: var(--font-primary-body);
+  -webkit-text-stroke: 1px rgba(255, 255, 255, 0.5);
+  mix-blend-mode: hard-light;
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  z-index: 2;
+}
+
+@supports (text-stroke: 1px rgba(255, 255, 255, 0.5)) {
+
+  .card__label {
+    text-stroke: 1px rgba(255, 255, 255, 0.5);
+  }
+} 
+
+.card__cover {
+  inline-size: 100%;
+  block-size: clamp(23.188rem, 8.5rem + 39.167vw, 43.75rem);
+  object-fit: cover;
+  display: block;
+}
+
+.card__content {
+  display: grid;
+  font-size: 18px;
+  gap: 25px;
+  padding: 22px 26px 25px;
+  line-height: 21px;
+}
+
+.button_group {
+  display: flex;
+  justify-content: flex-end;
+  gap: 4px;
+}
+
+.card__icon-button {
+  max-block-size: 38px;
+  max-inline-size: 42px;
+  display: flex;
+  padding: 0;
+  inline-size: 43px;
+  border: 2px solid transparent;
+  background-color: transparent;
+  transition: border 0.3s ease;
+}
+
+.card__button {
+  display: flex;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
+  border-style: inset;
+  font-family: var(--font-accent);
+  font-weight: var(--font-primary-body);
+  font-size: 14px;
+  line-height: 90%;
+  block-size: 55px;
+  inline-size: 335px;
+  border-color: var(--outline-color);
+  border-width: 2px;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border-color: var(--outline-color);
+}
+
+.card__like-button {
+  display: block;
+  position: relative;
+  overflow: hidden;
+  border-style: solid;
+  font-family: var(--font-accent);
+  font-weight: var(--font-primary-body);
+  font-size: 14px;
+  line-height: 90%;
+  block-size: 38px;
+  inline-size: 130px;
+  background-color: transparent;
+  border-color: var(--outline-color);
+  border-width: 2px;
+}
+
+.card__like-button:focus,
+.card__button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 var(--outline-color);
+  transition: box-shadow 0.3s ease;
+}
+
+.card__like-button::before,
+.card__button::before {
+  content: '';
+  position: absolute;
+  background-color: var(--black);
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+  width: 100%;
+  height: 100%;
+  top: 0;         
+  left: 0;
+  z-index: 0;
+}
+
+.card__like-button:hover::before,
+.card__button:hover::before {
+  transform: translateX(0);
+}
+
+.button__text {
+  z-index: 2;
+  color: var(--white);
+  mix-blend-mode: difference;
+}
+
+footer {
+  display: grid;
+  justify-content: center;
+  margin-block-end: 100px;
+}
+
+dialog[open] {
+  display: grid;
+  gap: 30px;
+  inline-size: clamp(21.313rem, 20.777rem + 1.429vw, 22.063rem);
+  font-size: 14px;
+  font-family: var(--font-accent);
+  font-weight: var(--font-primary-body);
+  line-height: 150%;
+  padding: 30px;
+  text-transform: uppercase;
+  color: var(--black);
+}
+
+dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.7);
+} 
+
+.dialog_content {
+  display: grid;
+  gap: 20px;
+  grid-auto-flow: column;
+  align-items: center;
+}
+
+.modal_button {
+  inline-size: 100%;
+  block-size: 38px;
+}
+
+.contrast-image {
+  filter: contrast(150%);
+}
+
+.blurry-image {
+  filter: blur(14px);
+}
+
+.hue-image {
+  filter: hue-rotate(230deg) saturate(450%);
+}
+
+.invert-image {
+  filter: invert(5%) sepia(50%);
+}
+
+.grayscale-image {
+  filter: grayscale(60%);
+}
+
+.multiply-image {
+  filter: hue-rotate(90deg) saturate(1500%) invert(25%);
+}
+
+.card__button svg {
+  filter: invert(1);
+  mix-blend-mode: difference;
+}
+
+@media (width <= 375px) {
+
+  .header {
+    margin-block-end: 100px;
+  }
+  
+  .main {
+    gap: 52px;
+  }
+
+  .card__content {
+    padding: 25px;
+  }
+
+  .card__button {
+    display: grid;
+    gap: 8px;
+    justify-items: center;
+    height: 100%;
+    padding: 17px;
+    inline-size: 306px;
+  }
+
+  .card__button svg {
+    width: 28px;
+    height: 28px;
+  }
 }
