--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,21 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+
+:root {
+  --font-primary: 'Inter Variable', serif;
+  --font-accent: 'PressStart2P', serif;
+  --font-primary-heading: 715;
+  --font-primary-body: 400;
+  --bg-gradient:
+    repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
+  --desk-width: clamp(23.438rem, -24.107rem + 126.786vw, 90rem);
+  --bg-color: #fff;
+  --outline-color: #000;
+  --black: #000;
+  --white: #fff;
+  --heart-stroke: #000;
+  --heart-fill: red;
+  --sparks-color: red;
+  --heart-hover: #000;
+}
