--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,12 +1,15 @@
+/* stylelint-disable function-url-quotes */
 /* В этом файле вы импортируете все шрифты для сайта. Один из них вариативный и требует особенной настройки */
-@font-face {
+
+@font-face { 
+  
   font-display: swap;
   font-family: 'Inter Variable';
   src:
     local('Inter Variable'),
     url('./Inter-Variable.woff2') format('woff2 supports variations'),
     url('./Inter-Variable.woff2') format('woff2-variations');
-  font-weight: var(--font-primary-body) var(--font-primary-heading);
+  font-weight: 400 715;
 }
 
 @font-face {
