--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,7 +2,7 @@
 
 :root {
   --font-primary: 'Inter Variable', serif;
-  --font-accent: 'PressStart2P', serif;
+  --font-accent: 'PressStart2P', fantasy;
   --font-primary-heading: 715;
   --font-primary-body: 400;
   --bg-gradient:
